# chemoenzymatic-retrosynthesis-agent

./: .env.example  .gitignore  CLAUDE.md  FIX_AGENT.md  INTEGRATION_COMPLETE.md  LOGGING_GUIDE.md  PRODUCTION_OVERVIEW.md  PRODUCTION_README.md  PRODUCTION_TEST_REPORT.md  QUICK_REFERENCE.md  README.md  brenda_kcat_v3.parquet  fix_model.sh  kb_config.yaml  main.py  pyproject.toml  reaction_merger.py  reaction_unifier.py  read.py  run_agent.py  unified_reaction_schema.py
.claude/: settings.local.json
.claude/skills/readretro/: SKILL.md
.claude/skills/readretro/references/: README.md
.claude/skills/readretro/scripts/: readretro_helper.py  run_readretro.sh
.claude/skills/retrobiocat/: SKILL.md
.claude/skills/retrobiocat/references/: COMPARISON_WITH_READRETRO.md  QUICK_START.md  README.md
.claude/skills/retrobiocat/scripts/: install_retrobiocat.sh  retrobiocat_helper.py
RetroBioCat/: rxns_yaml.yaml  trial_activity_data.xlsx
agents/: README.md  __init__.py  config.py  kb_tools.py  logging_utils.py  production_agent.py  prompts.py  retrobiocat_tools.py  utils.py
datasets/aizynthfinder/: uspto_model.hdf5  uspto_templates.hdf5
datasets/bkms/: bkms_templates_only.hdf
datasets/enzymemap/brenda/: enzymemap_brenda_metadata.csv  enzymemap_brenda_metadata.hdf
examples/: autogen_retrosynthesis.py  basic_usage.py  build_and_query_kb.py  production_example.py  test_retrobiocat_integration.py  test_tools_without_rbc.py
knowledge_base/: README.md  __init__.py  api.py  builder.py  cli.py  config.py  schema.py
knowledge_base/connectors/: __init__.py  base.py  bkms.py  brenda.py  enzyextract.py  kegg.py  pubchem.py  retrobiocat.py  uniprot.py  uspto.py  zinc.py
system_prompts/: retrosynthesis_agent_prompt.txt  retrosynthesis_agent_prompt_v1.0.txt
