[project]
name = "chemoenzymatic-retrosynthesis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 数据处理与科学计算
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "scipy>=1.11.0",
    "pyarrow>=17.0.0",

    # 深度学习框架
    "torch>=2.0.0",

    # 化学信息学
    "rdkit>=2023.9.1",
    "pubchempy>=1.0.4",

    # 图处理
    "networkx>=3.0",

    # API客户端
    "requests>=2.31.0",
    "zeep>=4.3.0",
    "chembl-webresource-client>=0.10.0",

    # 配置与实用工具
    "gin-config>=0.5.0",
    "easydict>=1.10",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[tool.setuptools]
py-modules = ["main", "brenda_client", "unified_reaction_schema", "reaction_unifier"]
